k8s_deploy/postgis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: njord-postgis-svc
  namespace: njord
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: njord-postgis-svc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: njord-postgis
  namespace: njord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: njord-postgis-svc
  template:
    metadata:
      labels:
        app: njord-postgis-svc
    spec:
      containers:
        - name: njord-postgis
          image: postgis/postgis:13-3.1
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: njordvolume
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: njordvolume
          persistentVolumeClaim:
            claimName: njordvolume
---
