k8s_deploy/chart_server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: njord-chart-svc
  namespace: njord
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  selector:
    app: njord-chart-svc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: njord-chart-dep
  namespace: njord
spec:
  selector:
    matchLabels:
      app: njord-chart-svc
  template:
    metadata:
      labels:
        app: njord-chart-svc
    spec:
      imagePullSecrets:
        - name: ghreg
      containers:
        - image: ghcr.io/manimaul/njord-chart-server:latest
          imagePullPolicy: Always
          name: njord-chart-svc
          command: ["/opt/njord/server.kexe", "/opt/njord/resources"]
          ports:
            - containerPort: 9000
              name: http
          resources:
            limits:
              cpu: "1.0"
              memory: "3G" # 1242Mi used during ingestion processing with 5 concurrent chartIngestWorkers
            requests:
              cpu: 300m
              memory: "1G"
          volumeMounts:
            - name: njord-config-vol
              mountPath: /opt/njord/resources/config/application.json
              subPath: application.json
              readOnly: true
            - name: njord-shared-data
              mountPath: /mnt/njord
        - name: pgbouncer
          image: ghcr.io/cloudnative-pg/pgbouncer:latest
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
            - name: pgbouncer-config
              mountPath: /etc/pgbouncer
              readOnly: true
      volumes:
        - name: njord-config-vol
          configMap:
            name: njord-config
        - name: njord-shared-data
          persistentVolumeClaim:
            claimName: njord-shared-data
        - name: pgbouncer-config
          projected:
            sources:
              - secret:
                  name: njord-pgbouncer-ini
              - secret:
                  name: njord-pgbouncer-userlist-txt
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: njord-ingress
  namespace: njord
spec:
  ingressClassName: haproxy
  rules:
    - host: openenc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: njord-chart-svc
                port:
                  number: 80
    - host: www.openenc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: njord-chart-svc
                port:
                  number: 80
  tls:
    - hosts:
        - openenc.com
        - www.openenc.com
      secretName: njord-cert
